<resources>
    <string name="app_name" translatable="false">Schedule Composer</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="list_empty">Список пуст</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="title_lecturers">Преподаватели</string>
    <string name="lecturer">преподавателя</string>
    <string name="title_settings">Настройки</string>
    <string name="title_schedule">Расписание</string>
    <string name="schedule">расписания</string>
    <string name="title_disciplines">Дисциплины</string>
    <string name="discipline">дисциплины</string>
    <string name="title_groups">Группы</string>
    <string name="group">группы</string>
    <string name="title_classrooms">Аудитории</string>
    <string name="classroom">аудитории</string>
    <string name="title_directions">Направления</string>
    <string name="direction">направления</string>
    <string name="title_syllabuses">Учебные планы</string>
    <string name="syllabus">учебного плана</string>
    <string name="search">Поиск</string>
    <string name="system">Системная</string>
    <string name="light">Светлая</string>
    <string name="dark">Тёмная</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="apply">Применить</string>
    <string name="clear">Отчистить</string>
    <string name="all">Все</string>
    <string name="url" translatable="false">URL</string>
    <string name="button_continue_text">Продолжить</string>
    <string name="server_connection">Подключение к серверу</string>
    <string name="theme">Тема</string>
    <string name="ph_classroom_details">Тип: %1$s\nКоличество мест: %2$s</string>
    <string name="ph_direction_details">Название: %s</string>
    <string name="ph_discipline_details">Название: %1$s\n\nКод: %2$s\nЦикл: %3$s\nВсего часов: %4$s\nЛекции: %5$s\nПрактики: %6$s\nЛабораторные: %7$s\nСРС: %8$s\nКонсультации: %9$s\n\nУчебный план: %10$s</string>
    <string name="ph_lecturer_details">Дисциплины:\n%s</string>
    <string name="ph_group_details">Количество студентов: %1$s\n\nУчебный план: %2$s</string>
    <string name="ph_syllabus_details">Название специальности: %1$s\nКод специальности: %2$s\n\nНаправление: %3$s</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="about">О приложении</string>
    <string name="logged_in_as">Вы вошли как</string>
    <string name="account">Аккаунт</string>
    <string name="general">Общие</string>
    <string name="version">Версия %s</string>
    <string name="required_field">Обязательное поле</string>
    <string name="wrong_format">Неверный формат</string>
    <string name="sign_in">Вход</string>
    <string name="first_name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="add_entity">Добавление %s</string>
    <string name="add">Добавить</string>
    <string name="edit_entity">Редактирование %s</string>
    <string name="edit">Редактировать</string>
    <string name="wrong_symbol_count">Превышено макс. число символов</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="number">Номер</string>
    <string name="classroom_type">Тип аудитории</string>
    <string name="seats_count">Количество мест</string>
    <string name="students_count">Количество студентов</string>
    <string name="field_syllabus">Учебный план</string>
    <string name="name">Название</string>
    <string name="code">Код</string>
    <string name="cycle">Цикл</string>
    <string name="hours_total">Всего часов</string>
    <string name="hours_lec">Лекции</string>
    <string name="hours_pr">Практики</string>
    <string name="hours_la">Лабораторные</string>
    <string name="hours_isw">СРС</string>
    <string name="hours_cons">Консультации</string>
    <string name="year">Год</string>
    <string name="specialty_code">Код специальности</string>
    <string name="specialty_name">Название специальности</string>
    <string name="field_direction">Направление</string>
    <string name="table_empty">Таблица пуста</string>

    <string name="even_short">Чёт</string>
    <string name="odd_short">Нечёт</string>

    <string name="even">Чётная</string>
    <string name="odd">Нечётная</string>

    <string name="lection">Лекция</string>
    <string name="lab">Лабораторная</string>
    <string name="practice">Практика</string>
    <string name="isw">СРС</string>

    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>

    <string name="unknown">\???</string>

    <string name="column_week">Неделя</string>
    <string name="column_day">День</string>
    <string name="column_period">Пара</string>

    <string name="column_semester">Семестер</string>
    <string name="column_group">Группа</string>
    <string name="column_discipline">Дисциплина</string>
    <string name="column_classroom">Аудитория</string>
    <string name="column_lecturer">Преподаватель</string>
    <string name="column_type">Тип занятия</string>

    <string name="select_syllabus">Выберите учебный план</string>
    <string name="select_year">Выберите год</string>
    <string name="select_semester">Выберите семестр</string>
    <string name="refresh">Обновить</string>
    <string name="si_group">Группа:</string>
    <string name="si_discipline">Дисциплина:</string>
    <string name="si_lecturer">Преподаватель:</string>
    <string name="si_type">Тип:</string>
    <string name="field_week">Неделя:</string>
    <string name="field_day">День:</string>
    <string name="field_period">Пара:</string>
    <string name="field_classroom">Аудитория:</string>
    <string name="field_group">Группа</string>
    <string name="field_discipline">Дисциплина</string>
    <string name="field_lecturer">Преподаватель</string>
    <string name="field_type">Тип занятия</string>
    <string name="exit_confirmation">Вы уверены, что хотите выйти?</string>
    <string name="delete_confirmation">Вы уверены, что хотите удалить \"%s\" ?</string>
</resources>