<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory app:title="@string/general">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_theme"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account">
        <Preference
            android:icon="@drawable/ic_user"
            android:key="loggedInAs"
            app:selectable="false"
            app:title="@string/logged_in_as"
            tools:summary="@string/username" />
        <Preference
            android:icon="@drawable/ic_logout"
            android:key="logout"
            android:title="@string/log_out" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">
        <Preference
            android:icon="@drawable/ic_about"
            app:selectable="false"
            app:key="about"
            app:title="@string/app_name"
            tools:summary="1.1.1" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>