<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/syllabusSelect">
    <fragment
        android:id="@+id/schedule"
        android:name="com.alexdeadman.schedulecomposer.fragment.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/classrooms"
        android:name="com.alexdeadman.schedulecomposer.fragment.list.ClassroomListFragment"
        android:label="@string/title_classrooms"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/directions"
        android:name="com.alexdeadman.schedulecomposer.fragment.list.DirectionListFragment"
        android:label="@string/title_directions"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/disciplines"
        android:name="com.alexdeadman.schedulecomposer.fragment.list.DisciplineListFragment"
        android:label="@string/title_disciplines"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/groups"
        android:name="com.alexdeadman.schedulecomposer.fragment.list.GroupListFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/lecturers"
        android:name="com.alexdeadman.schedulecomposer.fragment.list.LecturerListFragment"
        android:label="@string/title_lecturers"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/syllabuses"
        android:name="com.alexdeadman.schedulecomposer.fragment.list.SyllabusListFragment"
        android:label="@string/title_syllabuses"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/settings"
        android:name="com.alexdeadman.schedulecomposer.fragment.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/syllabusSelect"
        android:name="com.alexdeadman.schedulecomposer.fragment.select.SyllabusSelectFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_select" >
        <action
            android:id="@+id/action_syllabusSelect_to_yearSelect"
            app:destination="@id/yearSelect" />
    </fragment>
    <fragment
        android:id="@+id/semesterSelect"
        android:name="com.alexdeadman.schedulecomposer.fragment.select.SemesterSelectFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_select">
        <action
            android:id="@+id/action_semesterSelect_to_schedule"
            app:destination="@id/schedule" />
    </fragment>
    <fragment
        android:id="@+id/yearSelect"
        android:name="com.alexdeadman.schedulecomposer.fragment.select.YearSelectFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_select">
        <action
            android:id="@+id/action_yearSelect_to_semesterSelect"
            app:destination="@id/semesterSelect" />
    </fragment>
</navigation>