<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ConnectionFragment">

    <ImageView
        android:layout_marginTop="120dp"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/server" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/server_connection"
        android:textAlignment="center"
        android:textSize="30sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="40dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:inputType="textShortMessage" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/unknown_error"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="15sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_continue_text" />

</androidx.appcompat.widget.LinearLayoutCompat>