<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:app3="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/field_week"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                tools:text="Чётная" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/field_day"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                tools:text="Понедельник" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/field_period"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                tools:text="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/field_classroom"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_classroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                tools:text="314" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_group"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/field_group"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_text_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_discipline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/field_discipline"
        app1:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_text_view_discipline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_lecturer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/field_lecturer"
        app2:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_text_view_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/field_type"
        app3:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_text_view_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>