<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_edit_text_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_syllabus"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/field_syllabus">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_text_view_syllabus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_cycle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_edit_text_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cycle" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_total"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker_hours_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:np_dividerType="underline"
            app:np_height="40dp"
            app:np_min="0"
            app:np_orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_lec"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker_hours_lec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:np_dividerType="underline"
            app:np_height="40dp"
            app:np_min="0"
            app:np_orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_pr"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker_hours_pr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:np_dividerType="underline"
            app:np_height="40dp"
            app:np_min="0"
            app:np_orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_la"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker_hours_la"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:np_dividerType="underline"
            app:np_height="40dp"
            app:np_min="0"
            app:np_orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_isw"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker_hours_isw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:np_dividerType="underline"
            app:np_height="40dp"
            app:np_min="0"
            app:np_orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_cons"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker_hours_cons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:np_dividerType="underline"
            app:np_height="40dp"
            app:np_min="0"
            app:np_orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>